@@ -7,7 +7,7 @@
 
 %= $paginator
 
-% for my $t ( @$threads )
+% for my $t ( reverse @$threads )
 % {
 
 <article class="post" id="thread-<%= $t->{id} %>">
@@ -34,7 +34,7 @@
             % }
         </div>
         <div class="user">
-            <%= render_user({ id    => $t->{userId},
+            <%= render_user({ id    => $t->{author},
                               name  => $t->{name},
                               banId => $t->{banId} }) %>
         </div>
