@@ -1,5 +1,8 @@
 % layout 'default';
 %
+% my $news = $topic;
+% my $comments = $threads;
+%
 % title $news->{title};
 
 %#
@@ -25,13 +28,10 @@
                 </acronym>
         </div>
         <div class="user">
-            <%= render_user({ id    => $news->{author},
-                              name  => $news->{name},
-                              mail  => $news->{mail},
-                              banId => $news->{banId} }) %>
+            <%= render_user( $news->{author} ) %>
         </div>
     
-        % if ( $news->{userId} == user->{id} || $news->{W} > 0 )
+        % if ( $news->{owner} == user->{id} || $news->{W} > 0 )
         % {
         <div class="controlls">
             <div class="editThread">
@@ -72,6 +72,13 @@
 %#  Comments
 %#
 
+% if ( keys %$comments )
+% {
+    <div class=h3 style="margin-top:20px;"><%=l 'Responses to' %> &laquo;<%= $news->{title} %>&raquo;</div>
+% }
+
+%=b $paginator
+
 % for my $k ( sort keys %$comments )
 % {
 %     my $t = $comments->{$k};
@@ -100,13 +107,13 @@
             % }
         </div>
         <div class="user">
-            <%= render_user({ id    => $t->{userId},
+            <%= render_user({ id    => $t->{author},
                               name  => $t->{name},
                               mail  => $t->{mail},
                               banId => $t->{banId} }) %>
         </div>
     
-        % if ( $t->{userId} == user->{id} || $t->{W} > 0 )
+        % if ( $t->{owner} == user->{id} || $t->{W} > 0 )
         % {
         <div class="controlls">
             <div class="editThread">
