@@ -1,6 +1,9 @@
 % layout 'default';
 % title l('Profile') . ' ' . $user->{name};
 
+<a href="<%= url_for 'user_logout' %>">
+        <%=l 'logout' %></a>
+
 <table class=homeUser>
 
 % for my $k ( qw/name mail createAt modifyAt accessAt/ ) {
